--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,10 @@
         "drupal/drupal_cms_installer": "*",
         "drush/drush": "^12.5"
     },
+    "require-dev": {
+        "drupal/core-dev": "^10.3",
+        "weitzman/drupal-test-traits": "^2.3"
+    },
     "conflict": {
         "drupal/drupal": "*"
     },
