Use isolated PHPUnit tests and drop the dependency on Drupal Test Traits

--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,7 @@
         "drush/drush": "^12.5"
     },
     "require-dev": {
-        "drupal/core-dev": "^10.3",
-        "weitzman/drupal-test-traits": "^2.3"
+        "drupal/core-dev": "^10.3"
     },
     "conflict": {
         "drupal/drupal": "*"
