Re-introduce a quick-start command for Composer running on bare metal

--- a/composer.json
+++ b/composer.json
@@ -77,5 +77,10 @@
                 "  * Get involved with the Drupal community: https://drupal.org/getting-involved"
             ]
         }
+    },
+    "scripts": {
+        "quick-start": [
+            "@php ./web/core/scripts/drupal quick-start drupal_cms_installer"
+        ]
     }
 }
