Issue #3476076 by phenaproxima: Remove the quick-start DDEV script in favor of `ddev launch` and make it drop you into the installer

--- a/composer.json
+++ b/composer.json
@@ -71,7 +71,7 @@
                 "<bg=blue;fg=white>                                                   </>",
                 "",
                 "<bg=yellow;fg=black>Next steps</>:",
-                "  * Run <fg=yellow>composer quick-start</> to initialize Drupal CMS and open it in a browser",
+                "  * Run <fg=yellow>composer launch</> to initialize Drupal CMS and open it in a browser",
                 "  * Read the user guide: https://www.drupal.org/docs/user_guide/en/index.html",
                 "  * Get support: https://drupal.org/support",
                 "  * Get involved with the Drupal community: https://drupal.org/getting-involved"
@@ -79,7 +79,7 @@
         }
     },
     "scripts": {
-        "quick-start": [
+        "launch": [
             "@php ./web/core/scripts/drupal quick-start drupal_cms_installer"
         ]
     }
