--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -8,14 +8,16 @@ additional_fqdns: []
 database:
     type: mariadb
     version: "10.11"
-working_dir:
-    web: /var/www/html/web
 use_dns_when_possible: true
 composer_version: "2"
 web_environment: []
 nodejs_version: "16"
 corepack_enable: false
 ddev_version_constraint: '>= 1.23.0'
+hooks:
+    post-start:
+        # Install dependencies if needed.
+        - exec: 'test -d $(composer config vendor-dir) || composer install'
 
 # Key features of DDEV's config.yaml:
 
