--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,12 @@
         "drupal/core-project-message": "^10.4",
         "drupal/core-recommended": "^10.4",
         "drupal/drupal_cms": "*",
+        "drupal/drupal_cms_accessibility_tools": "*",
+        "drupal/drupal_cms_blog": "*",
+        "drupal/drupal_cms_events": "*",
         "drupal/drupal_cms_installer": "*",
+        "drupal/drupal_cms_multilingual": "*",
+        "drupal/drupal_cms_seo_advanced": "*",
         "drush/drush": "^12.5"
     },
     "conflict": {
