--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "drupal/drupal_cms_accessibility_tools": "*",
         "drupal/drupal_cms_blog": "*",
         "drupal/drupal_cms_events": "*",
+        "drupal/drupal_cms_forms": "*",
         "drupal/drupal_cms_installer": "*",
         "drupal/drupal_cms_multilingual": "*",
         "drupal/drupal_cms_seo_tools": "*",
